--- a/src/app/mortgage/mortgage.component.html
+++ b/src/app/mortgage/mortgage.component.html
@@ -27,8 +27,13 @@
         <ng-container matColumnDef="principal">
             <th mat-header-cell *matHeaderCellDef i18n> Principal </th>
             <td mat-cell *matCellDef="let loan; let i = index;">
-                <input [(ngModel)]="mortgage.loans[i].principal" class="calc-medium-width" style="width: 6em"
-                    type="number" (ngModelChange)="onLoanPrincipalChange(loan)" />
+                <input 
+                    [(ngModel)]="mortgage.loans[i].principal" 
+                    class="calc-medium-width" 
+                    style="width: 6em"
+                    calcSelectOnFocus
+                    type="number" 
+                    (ngModelChange)="onLoanPrincipalChange(loan)" />
                 <span class="calc-input-unit">{{currencyService.currencySymbol}}</span>
             </td>
             <td mat-footer-cell *matFooterCellDef>
@@ -39,8 +44,13 @@
         <ng-container matColumnDef="portion">
             <th mat-header-cell *matHeaderCellDef i18n> Portion </th>
             <td mat-cell *matCellDef="let i = index;">
-                <input [(ngModel)]="portions[i]" (ngModelChange)="onLoanPortionChange(i)" class="calc-medium-width"
-                    style="width: 3em" type="number" />
+                <input 
+                    [(ngModel)]="portions[i]" 
+                    (ngModelChange)="onLoanPortionChange(i)" 
+                    class="calc-medium-width"
+                    calcSelectOnFocus
+                    style="width: 3em" 
+                    type="number" />
                 <span class="calc-input-unit">%</span>
             </td>
             <td mat-footer-cell *matFooterCellDef>
@@ -50,7 +60,13 @@
         <ng-container matColumnDef="interestRate">
             <th mat-header-cell *matHeaderCellDef i18n> Interest Rate </th>
             <td mat-cell *matCellDef="let loan; let i = index;">
-                <input [(ngModel)]="mortgage.loans[i].interestRate" type="number" step="0.1" min="0" max="15"
+                <input 
+                    [(ngModel)]="mortgage.loans[i].interestRate" 
+                    type="number" 
+                    step="0.1" 
+                    calcSelectOnFocus
+                    min="0" 
+                    max="15"
                     style="width: 3em" class="calc-medium-width" />
                 <span class="calc-input-unit">%</span>
             </td>
@@ -59,7 +75,12 @@
         <ng-container matColumnDef="months">
             <th mat-header-cell *matHeaderCellDef i18n> Months </th>
             <td mat-cell *matCellDef="let loan; let i = index;">
-                <input [(ngModel)]="mortgage.loans[i].months" class="calc-medium-width" type="number" min="1" />
+                <input 
+                    [(ngModel)]="mortgage.loans[i].months" 
+                    class="calc-medium-width" 
+                    calcSelectOnFocus
+                    type="number" 
+                    min="1" />
             </td>
             <td mat-footer-cell *matFooterCellDef> {{mortgage.totalMonths}} </td>
         </ng-container>
@@ -87,28 +108,27 @@
     </table>
 </div>
 <div class="margin-top-half calc-buttons-row">
-    <span *ngIf="selection.hasValue()">
-        <button 
-            *ngIf="principalCoverageDifference"
-            mat-raised-button color="primary" 
-            calcTrackOnClick="mortgageFixPrincipals"
-            (click)="fixPrincipals()">
-            <mat-icon aria-hidden="false" aria-label="Plus">auto_fix_normal</mat-icon>
-            <ng-container
-                i18n="button text|Text for button to automatically set the amount of the selected loans in a mortgage">
-                {selection.selected.length, plural, =1 {Autofix selected loan} other {Autofix selected loans}}
-            </ng-container>
-        </button>
-        <button 
-            mat-raised-button 
-            color="warn" 
-            [disabled]="selection.selected.length === mortgage.loans.length"
-            calcTrackOnClick="mortgageRemoveSelectedLoans"
-            (click)="removeSelectedLoans()">
-            <mat-icon aria-hidden="false" aria-label="Plus">delete</mat-icon>
-            <ng-container i18n>Remove {{selection.selected.length}}</ng-container>
-        </button>
-    </span>
+    <button 
+        *ngIf="principalCoverageDifference"
+        mat-raised-button color="primary" 
+        calcTrackOnClick="mortgageFixPrincipals"
+        (click)="fixPrincipals()">
+        <mat-icon aria-hidden="false" aria-label="Plus">auto_fix_normal</mat-icon>
+        <ng-container
+            i18n="button text|Text for button to automatically set the amount of the selected loans in a mortgage">
+            {selection.selected.length, plural, =0 {Autofix loans} =1 {Autofix selected loan} other {Autofix selected loans}}
+        </ng-container>
+    </button>
+    <button 
+        *ngIf="selection.hasValue()"
+        mat-raised-button 
+        color="warn" 
+        [disabled]="selection.selected.length === mortgage.loans.length"
+        calcTrackOnClick="mortgageRemoveSelectedLoans"
+        (click)="removeSelectedLoans()">
+        <mat-icon aria-hidden="false" aria-label="Plus">delete</mat-icon>
+        <ng-container i18n>Remove {{selection.selected.length}}</ng-container>
+    </button>
     <button 
         mat-raised-button color="primary" 
         calcTrackOnClick="mortgageAddLoan"
